@@ -2,13 +2,17 @@
 Hash: SHA256
 
 DIST Bit-Vector-7.2.tar.gz 137817 SHA256 6339f9e4376c623b411934cdfb52d7553c6c38457bfa376b953d40ca007807c2 SHA512 0344c2572e4a16259a4bb4b5f668c8f0ab32dc5a4eb0ab9e7da15ae86c1845036851095aa6353dcc9b1f9bf72ec5bd204e349c286ff5896869c36a4b7ff55955 WHIRLPOOL 219338151a816d055930878efe9c127f35ff3976c9e4c8a374bb821daace297fc6fee760d02b16225b5e7ceee45323a9b6ace0ef07a82ffb88d4f91e6d8bbd56
+DIST Bit-Vector-7.3.tar.gz 130395 SHA256 5a76330bfb9b9083371484c960d01ac0ad0e129fe770bfb1e87a85384e088f3d SHA512 e6baa2385d366ee00449abe52c20c49dbd41d2396d7c8f0fd6222262b6c4399d75eb081f46c5d1e524d12dafe0e5e78249f273e7705d04bd03033703fd2e86c8 WHIRLPOOL f583160f314e9d1ef0715711620ae5037e9cd196550c5f7ff2397ea4770a2d85b288d1d948619b2c724cb9bb8004a452493b340fcb1e491d7d67b649811e7503
 EBUILD Bit-Vector-7.200.0-r1.ebuild 571 SHA256 37105c1bb8c9e999ba5eeb6ac53f921f8a90a52c2babbd4803c5d26a3970e310 SHA512 c428d40468c5acbacefd3b3a197bd03c93e734d73830f71b7d5700016fcf704bb46e265feb9c4ec61be5e64e12ef7f5bb363e4a6514a503a6f3b8d72d0bf22c3 WHIRLPOOL 0ac8eeddc3aed94b4c4b3b558d0955f32d48d388a0994857a404dea9f3185e2d82f93a5b6bf2675226353c51fe2b2b2c5bee6d11a9322308a8412743772018b4
-MISC ChangeLog 6428 SHA256 3d29f8e7176da428e04ac934aab0c7dfbb2a955b0fc57b664c618c83287578a5 SHA512 531232c2df6a7b5108d9f0c6461545da33e3181af5f12bd4484538aff4e2e5269ba0b42032d053b0befe81509e7d656aee5026488e6b9389ca6e2f2b38914446 WHIRLPOOL febf0a659ccbdf23b519c48f032761a7db271881ca3cba4d70f2295748a7e9fc47d37b4da39899eb03948ccbed3627065c45883ba62ee8d96082a10997b36a55
+EBUILD Bit-Vector-7.300.0.ebuild 586 SHA256 d7e82a5a752ebf254cfed48c7e69a125201c0046cd67ee96ccd0fc456379d92e SHA512 5f8a5b0ff457d7f07b43499b95810247cfde6f3b369510325eadde494f019b0c157135e18f643a0b1c5da6472c3495081fb6ff891defa0171ebf4e1767f09ed7 WHIRLPOOL 1fc534f0acf6b4056c056cfe41b4a2fcb47323fdea025db609768fbde7a6e08224a05c4b008467151df619711112a2d1f00d9780cb20a036e586810cad77b276
+MISC ChangeLog 6577 SHA256 e6be6a1fdf2891d978d7a0469a5a9beb0ca13bc3bf19ba94b39cb0e704fa3993 SHA512 ac349d9d2354d1031e25f5cd38d797918c32a5a65631302f58b52146b7c135fcfdfbdc7fd791a9796a3215b36167e362f5d6544c933a83ec5a0e8b505831698d WHIRLPOOL 4c60d26f57d686d93820e54994ad4f7f5d24565923013bb5d76a75ad5a17023af0d1ca99c8826cc9227994502893ec052c733cbb7c37e2e1dc488d3576b7d661
 MISC metadata.xml 428 SHA256 c9e656dc5bfa2c9114d81fe0c227b9b0d4c56fe3b714a5c1b514044cb1038010 SHA512 e7f013eaeec56d8e15cfe741fe9a6dde293fe2f77f9d8c78c242ff1124196b1673b89f3c8d1e6c346e7870b61d927a834e186b185bc4f06c008544ad2db500c3 WHIRLPOOL d260e035147583e47360c1425f7bbded3f115bd30a0bb5dd365cb83d4ca1d83fb299cf69ff90749a1a7520f9cb03fef583507e89a66d308b23fc019f39aedfba
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlP2B6IACgkQ2ugaI38ACPAdyAD/WVHMXmoChPFPg/v/iPt/4UTv
-/zfXjWBHCIaOp0oecaIBAJoVWd7Skdh6rAUb+RgHyZbqkv7pj5x/o3UtRgpcyoig
-=r25p
+iJwEAQEIAAYFAlQTL0IACgkQG9wOWsQutdYfrwQAzSbUbhr+dShnfyDpyNGO+dih
+vmXpD/mYJSxZZKbQqBgEVpWWDt60NKvTOrSgfTRUxISWYxIT7GBzAdpzoGpyHJZN
+l7csG2DIknemwJcM2xyOaGoWUiet22Y4gcBbT4nkSFjY+KXyhIpdeDrVY6k1CGn/
++w8GGr6DvR8jWn6jBD8=
+=m/br
 -----END PGP SIGNATURE-----
